--- a/components/contactus.html
+++ b/components/contactus.html
@@ -57,7 +57,7 @@
             <div class="map-section">
                 <div class="qr-code">
                     <h3>Scan Our QR Code</h3>
-                    <img src="/images/Map Location.jpeg" alt="QR Code for our location">
+                    <img src="/images/qrcode.png" alt="QR Code for our location">
                 </div>
                 <div class="google-map">
                     <h3>Our Location</h3>
