--- a/components/gallery.html
+++ b/components/gallery.html
@@ -75,8 +75,8 @@
         <p>Explore our cutting-edge equipment and tools.</p>
         <div class="gallery-grid">
             <img src="/images/11.jpg" alt="Image 11" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/12.jpg" alt="Image 12" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/13.jpg" alt="Image 13" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/12.png" alt="Image 12" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/13.png" alt="Image 13" class="gallery-image" onclick="openImage(this)">
             <img src="/images/14.jpg" alt="Image 14" class="gallery-image" onclick="openImage(this)">
             <img src="/images/15.jpg" alt="Image 15" class="gallery-image" onclick="openImage(this)">
             <img src="/images/16.jpg" alt="Image 16" class="gallery-image" onclick="openImage(this)">
